--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<html>
+  <body>
+<h1> Nana Lee <h1>
+  <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan and </p>
