--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <html>
   <body>
 <h1> Nana Lee <h1>
+  <img src="img_4756.jpg">
   <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan and </p>
