--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:green;">
+  <body style="background-color:lavender;">
+    
     
 <h1> Nana Lee <h1>
-  <img src="img_4756.jpg">
+  <img src="https://user-images.githubusercontent.com/79895560/111874855-ef3f3800-89d1-11eb-8de9-ed0e53363509.JPG">
   <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   </p>
