--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="stuff.css">
-  </head>
-  
+ 
   <body style="background-color:lavender;">
   
     
-    <img src="https://user-images.githubusercontent.com/79895560/111874855-ef3f3800-89d1-11eb-8de9-ed0e53363509.JPG" alt="self-portrait" style=">
+    <img src="https://user-images.githubusercontent.com/79895560/111874855-ef3f3800-89d1-11eb-8de9-ed0e53363509.JPG" alt="self-portrait" style=border-radius:50%>
     
 <h1> Nana Lee </h1>
   
