--- a/index.html
+++ b/index.html
@@ -73,10 +73,8 @@ footer {
     
 <header> 
 <h1> Nana Lee </h1>
-
- <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
- </p> 
-<p> <img src="https://user-images.githubusercontent.com/79895560/111874855-ef3f3800-89d1-11eb-8de9-ed0e53363509.JPG" alt="self-portrait" style="width:170px;height:170px;border-radius:50%;">
+<p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage. 
+<img src="https://user-images.githubusercontent.com/79895560/111874855-ef3f3800-89d1-11eb-8de9-ed0e53363509.JPG" alt="self-portrait" style="width:250px;height:250px;border-radius:50%;">
  I also really like consuming horror in all its forms - such as manga, movies, books and games. </p>
 </header>
 
