--- a/index.html
+++ b/index.html
@@ -78,10 +78,22 @@ footer {
  I also really like consuming horror in all its forms - such as manga, movies, books and games. </p>
 </header>
  
+ <section>
+  <nav>
+    <ul>
+      <li><a href="#">London</a></li>
+      <li><a href="#">Paris</a></li>
+      <li><a href="#">Tokyo</a></li>
+    </ul>
+  </nav>
+ 
  <article>
   <h2> hi </h2>
   <img src="https://user-images.githubusercontent.com/79895560/111874918-24e42100-89d2-11eb-9b52-3eeaabe102bb.jpeg">
   
   <img src="https://user-images.githubusercontent.com/79895560/111874921-26ade480-89d2-11eb-8062-ab717e6bcf0f.jpeg">
+  
+  </article>
+ </section>
   
 
