--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   }
   /* Create two columns/boxes that floats next to each other */
 nav {
-  float: left;
+  float: right;
   width: 30%;
-  background: #ccc;
+  background: #F5F5DC;
   padding: 20px;
 }
 
