--- a/index.html
+++ b/index.html
@@ -81,9 +81,22 @@ footer {
  <section>
   <nav>
     <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li>Modern Family</li>
+     <li>Brooklyn Nine Nine</li>
+      <li>Its Okay to Not Be Okay</li>
+      <li>Stranger Things</li>
+     <li>Modern Family</li>
+     <li>Brooklyn Nine Nine</li>
+      <li>Its Okay to Not Be Okay</li>
+      <li>Stranger Things</li>
+     <li>Modern Family</li>
+     <li>Brooklyn Nine Nine</li>
+      <li>Its Okay to Not Be Okay</li>
+      <li>Stranger Things</li>
+     <li>Modern Family</li>
+     <li>Brooklyn Nine Nine</li>
+      <li>Its Okay to Not Be Okay</li>
+      <li>Stranger Things</li>
     </ul>
   </nav>
  
