--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@ footer {
     
 <header> 
 <h1> Nana Lee </h1>
+ <img src="https://user-images.githubusercontent.com/79895560/111899476-c10c3780-8a67-11eb-8504-ed42fba2b7f4.JPG" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;">
+ I also really like consuming horror in all its forms - such as manga, movies, books and games. 
 <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage. 
-<img src="https://user-images.githubusercontent.com/79895560/111899476-c10c3780-8a67-11eb-8504-ed42fba2b7f4.JPG" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;">
- I also really like consuming horror in all its forms - such as manga, movies, books and games. </p>
+</p>
 </header>
  
  <section>
