--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   }
   /* Create two columns/boxes that floats next to each other */
 nav {
-  float: right;
-  width: 30%;
+  float: left;
+  width: 20%;
   background: #F5F5DC;
   padding: 20px;
 }
