--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
  img {
-  float: left;
+  float: right;
  }
   * {
     box sizing:border-box;
@@ -18,7 +18,7 @@
   header {
     background-color:#FFE4C4;
     padding:30px;
-    text-align:right;
+    text-align:center;
     font-size:15px;
     color:white;
   }
