--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   header {
     background-color:#FFE4C4;
     padding:30px;
+    width:70%;
     text-align:center;
     font-size:15px;
     color:white;
