--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+ img {
+  float:left;
+ }
   * {
     box sizing:border-box;
   }
@@ -72,7 +75,8 @@ footer {
     
 <header>
 
-<h1> Nana Lee </h1>
+<h1> Nana Lee's ePortfolio </h1>
+<img src="https://user-images.githubusercontent.com/79895560/111899476-c10c3780-8a67-11eb-8504-ed42fba2b7f4.JPG" alt="self-portrait" style="width:165px;height:165px;border-radius:60%;">
 <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
 </p>
@@ -81,7 +85,6 @@ footer {
  <section>
   <nav>
     <ul>
-     <img src="https://user-images.githubusercontent.com/79895560/111899476-c10c3780-8a67-11eb-8504-ed42fba2b7f4.JPG" alt="self-portrait" style="width:165px;height:165px;border-radius:60%;">
      <br>
       <li>Modern Family</li>
      <li>Brooklyn Nine Nine</li>
