--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
  img {
-  float:right;
+  float:left;
  }
   * {
     box sizing:border-box;
@@ -20,7 +20,7 @@
     padding:30px;
     width:91.45%;
     text-align:center;
-    font-size:15px;
+    font-size:20px;
     color:white;
   }
   /* Create two columns/boxes that floats next to each other */
