--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ nav {
 
 /* Style the list inside the menu */
 nav ul {
-  text-aligh:center;
-  list-style-type: none;
+  text-align:center;
   padding: 0;
 }
 
@@ -84,22 +83,6 @@ footer {
      <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
-      <li>Modern Family</li>
-     <li>Brooklyn Nine Nine</li>
-      <li>Its Okay to Not Be Okay</li>
-      <li>Stranger Things</li>
-     <li>Modern Family</li>
-     <li>Brooklyn Nine Nine</li>
-      <li>Its Okay to Not Be Okay</li>
-      <li>Stranger Things</li>
-     <li>Modern Family</li>
-     <li>Brooklyn Nine Nine</li>
-      <li>Its Okay to Not Be Okay</li>
-      <li>Stranger Things</li>
-     <li>Modern Family</li>
-     <li>Brooklyn Nine Nine</li>
-      <li>Its Okay to Not Be Okay</li>
-      <li>Stranger Things</li>
     </ul>
   </nav>
  
