--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   }
   /* Create two columns/boxes that floats next to each other */
 nav {
-  float: right;
+  float: left;
   width: 20%;
   background: #F5F5DC;
   padding: 20px;
