--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ footer {
  <section>
   <nav>
     <ul>
-     <li>
+     <p>
      <img src="https://user-images.githubusercontent.com/79895560/111899476-c10c3780-8a67-11eb-8504-ed42fba2b7f4.JPG" alt="self-portrait" style="width:150px;height:150px;border-radius:60%;">    
-     </li>
-      <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
+     </p>
+      <li> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
-    </p>
+    </li>
     </ul>
   </nav>
  
