--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
   
   header {
-    background-color:#FFE4C4;
+    background-color:#FFF0F5;
     padding:30px;
     width:91.45%;
     text-align:center;
@@ -24,7 +24,7 @@
 nav {
   float: left;
   width: 20%;
-  background: #F5F5DC;
+  background: #D8BFD8;
   padding: 20px;
 }
 
