--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
   
   header {
-    background-color:#FFF0F5;
+    background-color:#F5FFFA;
     padding:30px;
     width:91.45%;
     text-align:center;
