--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     width:91.45%;
     text-align:center;
     font-size:20px;
-    color:white;
+    color:#BC8F8F;
   }
   /* Create two columns/boxes that floats next to each other */
 nav {
