--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   }
   /* Create two columns/boxes that floats next to each other */
 nav {
-  float: left;
-  width: 20%;
-  background: #E6E6FA;
+  float:left;
+  width:20%;
+  background:#F5FFFA;
   padding: 20px;
 }
 
