--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 nav {
   float:left;
   width:20%;
-  background:#FFF0F5;
+  background:#FFFACD;
   padding: 20px;
 }
 
@@ -81,6 +81,7 @@ footer {
       </p>
      </center>
    <br>
+   <h2> Nayli </h2>
       <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
@@ -88,10 +89,18 @@ footer {
   </nav>
  
  <article>
-  <h2> hi </h2>
-  <img src="https://user-images.githubusercontent.com/79895560/111874918-24e42100-89d2-11eb-9b52-3eeaabe102bb.jpeg">
+  <p> <b> What is your interest in IT? </b> </p>
   
-  <img src="https://user-images.githubusercontent.com/79895560/111874921-26ade480-89d2-11eb-8062-ab717e6bcf0f.jpeg">
+  <p> I’m interested in using technology to transform the fashion industry. 
+   Online shopping has become more popular recently, however I’m looking to make an impact in the fashion industry such as creating an AI software to analyse
+   and predict fashion trends as well as an interactive virtual wardrobe that will allow consumers to “try on” clothes from the comfort of their own homes. 
+   Besides that, I’m also interested in the psychological effects of technology. 
+   The world has become increasingly dependent on technology, with a digital surge due to the pandemic (De’, Pandey & Pal, 2020). 
+   The outbreak has made corporations, teachers and students become increasingly dependent on technology, normalising concepts such as working from home and distance
+   learning. Social media applications such as Tiktok and Instagram have also become increasingly popular amongst teenagers, with 32.5% of users between the age range
+   of 10-19 years old (Tankovska, 2021). I’m keen to study the effects of the dependency of technology, especially its impact on mental health.
+  </p>
+
   
   </article>
  </section>
