--- a/index.html
+++ b/index.html
@@ -101,7 +101,30 @@ footer {
    of 10-19 years old (Tankovska, 2021). I’m keen to study the effects of the dependency of technology, especially its impact on mental health.
   </p>
 
+  <p> <b> When did your interest in IT start? </b> </p>
+  <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
+   The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
+   After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
+   and I discovered that I enjoyed programming much more than any other subject I studied. 
+   Doing well in these subjects gave me the confidence to pursue IT as a degree and career option. 
+  </p>
   
+  <p> <b> Was there a particular event or person that sparked your interest? </p> </b>
+   <p> During the second lockdown in Malaysia, I caved in and watched a Korean drama called Start-Up.
+    Although I had already chosen to pursue a degree in IT, this show definitely helped me realise how impactful the technology industry is. 
+    The plot involved 3 IT majors who developed an artificial intelligence based software to visually recognize items in real life. 
+    Afterwards, the software was used to create an application to help visually impaired individuals perform daily functions. 
+    The show also analysed the public’s general fear of technology replacing labour. 
+    Watching the show also introduced me to some new concepts such as machine learning, algorithms and hackathons. 
+    I did not fully understand these topics at first, but I was determined to understand them and intensively read books and articles on these topics.
+   </p>
+   
+   <p><b> Why did you choose to come to RMIT? </p> </b>
+<p> I chose to come to RMIT because I liked the program structure for Bachelor of Information Technology and related degrees such as Computer Science and Software Engineering. 
+ I originally applied for Bachelor of Software Engineering program, however I was not aware of the advanced mathematics prerequisite. 
+ After my first year, I might consider switching to the Bachelor of Computer Science program. </p>
+
+
   </article>
  </section>
   
