--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer {
   </nav>
  
  <article>
-  <p> <b> What is your interest in IT? </b> </p>
+  <pstyle="background-color:#F5FFFA;"> <b> What is your interest in IT? </b> </p>
   
   <p> I’m interested in using technology to transform the fashion industry. 
    Online shopping has become more popular recently, however I’m looking to make an impact in the fashion industry such as creating an AI software to analyse
