--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ article {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #8FBC8F;
+  background-color:#F0F8FF;
 }
 
 /* Clear floats after the columns */
