--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer {
   </nav>
  
  <article>
-  <pstyle="background-color:#F5FFFA;"> <b> What is your interest in IT? </b> </p>
+  <pstyle="background-color:#E6E6FA;"> <b> What is your interest in IT? </b> </p>
   
   <p> I’m interested in using technology to transform the fashion industry. 
    Online shopping has become more popular recently, however I’m looking to make an impact in the fashion industry such as creating an AI software to analyse
@@ -101,7 +101,8 @@ footer {
    of 10-19 years old (Tankovska, 2021). I’m keen to study the effects of the dependency of technology, especially its impact on mental health.
   </p>
 
-  <p> <b> When did your interest in IT start? </b> </p>
+  <pstyle="background-color:#E6E6FA;> <b> When did your interest in IT start? </b> </p>
+           
   <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
    The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
    After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
@@ -109,7 +110,8 @@ footer {
    Doing well in these subjects gave me the confidence to pursue IT as a degree and career option. 
   </p>
   
-  <p> <b> Was there a particular event or person that sparked your interest? </p> </b>
+  <pstyle="background-color:#E6E6FA;> <b> Was there a particular event or person that sparked your interest? </p> </b>
+  
    <p> During the second lockdown in Malaysia, I caved in and watched a Korean drama called Start-Up.
     Although I had already chosen to pursue a degree in IT, this show definitely helped me realise how impactful the technology industry is. 
     The plot involved 3 IT majors who developed an artificial intelligence based software to visually recognize items in real life. 
@@ -119,7 +121,8 @@ footer {
     I did not fully understand these topics at first, but I was determined to understand them and intensively read books and articles on these topics.
    </p>
    
-   <p><b> Why did you choose to come to RMIT? </p> </b>
+   <pstyle="background-color:#E6E6FA;><b> Why did you choose to come to RMIT? </p> </b>
+            
 <p> I chose to come to RMIT because I liked the program structure for Bachelor of Information Technology and related degrees such as Computer Science and Software Engineering. 
  I originally applied for Bachelor of Software Engineering program, however I was not aware of the advanced mathematics prerequisite. 
  After my first year, I might consider switching to the Bachelor of Computer Science program. </p>
