--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ nav {
   background:#FFFACD;
   padding: 20px;
  font-size: 15px;
- color: #BDB76B;
+ color: #556B2F;
 }
 
 /* Style the list inside the menu */
@@ -40,6 +40,8 @@ article {
   padding: 20px;
   width: 70%;
   background-color:#F0F8FF;
+ font-size: 17px;
+ color:#D8BFD8;
 }
 
 /* Clear floats after the columns */
