--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ article {
   width: 70%;
   background-color:#F0F8FF;
  font-size: 17px;
- color:#D8BFD8;
 }
 
 /* Clear floats after the columns */
@@ -93,7 +92,7 @@ footer {
   </nav>
  
  <article>
-  <p> <b> What is your interest in IT? </b> </p>
+  <p style="color:red;"> <b> What is your interest in IT? </b> </p>
   
   <p> I’m interested in using technology to transform the fashion industry. 
    Online shopping has become more popular recently, however I’m looking to make an impact in the fashion industry such as creating an AI software to analyse
@@ -105,7 +104,7 @@ footer {
    of 10-19 years old (Tankovska, 2021). I’m keen to study the effects of the dependency of technology, especially its impact on mental health.
   </p>
 
-  <pstyle="background-color:#E6E6FA;> <b> When did your interest in IT start? </b> </p>
+  <p> <b> When did your interest in IT start? </b> </p>
            
   <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
    The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
