--- a/index.html
+++ b/index.html
@@ -92,9 +92,15 @@ footer {
   </nav>
  
  <article>
-  <p style="color:red;"> <b> What is your interest in IT? </b> </p>
+  <p style="color:red;"> <b> INTEREST IN IT? </b> </p>
   
-  <p> I’m interested in using technology to transform the fashion industry. 
+   <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
+   The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
+   After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
+   and I discovered that I enjoyed programming much more than any other subject I studied. 
+   Doing well in these subjects gave me the confidence to pursue IT as a degree and career option. 
+  </p>
+  <p> Currently, I’m interested in using technology to transform the fashion industry. 
    Online shopping has become more popular recently, however I’m looking to make an impact in the fashion industry such as creating an AI software to analyse
    and predict fashion trends as well as an interactive virtual wardrobe that will allow consumers to “try on” clothes from the comfort of their own homes. 
    Besides that, I’m also interested in the psychological effects of technology. 
@@ -103,17 +109,8 @@ footer {
    learning. Social media applications such as Tiktok and Instagram have also become increasingly popular amongst teenagers, with 32.5% of users between the age range
    of 10-19 years old (Tankovska, 2021). I’m keen to study the effects of the dependency of technology, especially its impact on mental health.
   </p>
-
-  <p> <b> When did your interest in IT start? </b> </p>
-           
-  <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
-   The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
-   After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
-   and I discovered that I enjoyed programming much more than any other subject I studied. 
-   Doing well in these subjects gave me the confidence to pursue IT as a degree and career option. 
-  </p>
   
-  <pstyle="background-color:#E6E6FA;> <b> Was there a particular event or person that sparked your interest? </p> </b>
+  <pstyle="color:#E6E6FA;"> <b> Was there a particular event or person that sparked your interest? </p> </b>
   
    <p> During the second lockdown in Malaysia, I caved in and watched a Korean drama called Start-Up.
     Although I had already chosen to pursue a degree in IT, this show definitely helped me realise how impactful the technology industry is. 
