--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     box sizing:border-box;
   }
   <body>
-  
+ 
   {font-family: Courier New, Times New Roman, Georgia;
   }
   
@@ -92,6 +92,32 @@ footer {
   </nav>
  
  <article>
+  
+  <h2>Basic HTML Table</h2>
+
+<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr>
+</table>
+  
   <p style="color:red;"> <b> INTEREST IN IT? </b> </p>
   
    <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
