--- a/index.html
+++ b/index.html
@@ -97,13 +97,17 @@ footer {
 
 <table style="width:100%">
   <tr>
-    <th>Firstname</th>
+    <th>Fir</th>
     <th>Lastname</th> 
     <th>Age</th>
   </tr>
   <tr>
-    <td>Jill</td>
-    <td>Smith</td>
+    <td>Interest in IT</td>
+    <td>My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
+   The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
+   After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
+   and I discovered that I enjoyed programming much more than any other subject I studied. 
+   Doing well in these subjects gave me the confidence to pursue IT as a degree and career option. </td>
     <td>50</td>
   </tr>
   <tr>
@@ -120,11 +124,7 @@ footer {
   
   <p style="color:red;"> <b> INTEREST IN IT? </b> </p>
   
-   <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
-   The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
-   After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
-   and I discovered that I enjoyed programming much more than any other subject I studied. 
-   Doing well in these subjects gave me the confidence to pursue IT as a degree and career option. 
+   <p> 
   </p>
   <p> Currently, I’m interested in using technology to transform the fashion industry. 
    Online shopping has become more popular recently, however I’m looking to make an impact in the fashion industry such as creating an AI software to analyse
