--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+ table, th, td {
+  border: 1px solid #D8BFD8;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+}
   * {
     box sizing:border-box;
   }
