--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@ footer {
  
  <article>
   
-  <h2>Basic HTML Table</h2>
 
 <table style="width:100%">
   <tr>
@@ -109,7 +108,7 @@ footer {
  
   <tr>
     
-   <td>Interest in IT</td>
+   <td><h1 style="font-size:30px;"> Interest in IT <h1></td>
    
     <td> <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
    The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
@@ -134,13 +133,20 @@ footer {
     The show also analysed the public’s general fear of technology replacing labour. 
     Watching the show also introduced me to some new concepts such as machine learning, algorithms and hackathons. 
     I did not fully understand these topics at first, but I was determined to understand them and intensively read books and articles on these topics.
+     </p>
+     
+     <p>
+      I chose to come to RMIT because I liked the program structure for Bachelor of Information Technology and related degrees such as Computer Science and Software Engineering.
+      I originally applied for Bachelor of Software Engineering program, however I was not aware of the advanced mathematics prerequisite. 
+      After my first year, I might consider switching to the Bachelor of Computer Science program. 
+      I expect to learn valuable programming skills as well as how to create an attractive and beginner friendly user interface. 
    </p>
    </td>
    
   </tr>
  
   <tr>
-    <td>Eve</td>
+    <td>Ideal Job</td>
     <td>Jackson</td>
     <td>94</td>
   </tr>
