--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ footer {
  
   <tr>
     
-   <td><h1 style="font-size:30px;"> Interest in IT <h1></td>
+   <td><h1 style="font-size:20px;color:#BC8F8F"> Interest in IT <h1></td>
    
     <td> <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
    The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
