--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ th, td {
 nav {
   float:left;
   width:20%;
-  background:#D8BFD8;
+  background:#E6E6FA;
   padding: 20px;
  font-size: 15px;
  color: #556B2F;
