--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ footer {
  
   <tr>
     
-   <td><h1 style="font-size:20px;color:#BC8F8F"> Interest in IT <h1></td>
+   <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Interest in IT </i> <h1></td>
    
     <td> <p> My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
    The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
@@ -146,8 +146,10 @@ footer {
   </tr>
  
   <tr>
-    <td>Ideal Job</td>
-    <td>Jackson</td>
+      <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1></td>
+         <td><h1 style="font-size:20px;color:#BC8F8F"> <i> Technology Strategy Analyst </i> </h1></td>
+       
+    <p>Analysing trends within the industry to formulate business and technology strategies, as well as develop pathways to make optimal investment decisions. </p>
     <td>94</td>
   </tr>
   <tr>
