--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@ footer {
  
   <tr>
       <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1></td>
-         <td><h1 style="font-size:20px;color:#BC8F8F"> <i> Technology Strategy Analyst </i> </h1></td>
+         <td><h1 style="font-size:20px;color:#BC8F8F"> <i> Technology Strategy Analyst </i> </h1>
+       <p> Analysing trends within the industry to formulate business and technology strategies, as well as develop pathways to make optimal investment decisions. </p></td>
        
-    <p>Analysing trends within the industry to formulate business and technology strategies, as well as develop pathways to make optimal investment decisions. </p>
+    
     <td>94</td>
   </tr>
   <tr>
