--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ footer {
   <tr>
       <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1></td>
          <td><h1 style="font-size:20px;color:#BC8F8F"> <i> Technology Strategy Analyst </i> </h1>
+          <img src="https://user-images.githubusercontent.com/79895560/111909112-e5cbd380-8a96-11eb-8d9e-8d3ec5c13db6.png">
        <p> Analysing trends within the industry to formulate business and technology strategies, as well as develop pathways to make optimal investment decisions. </p></td>
        
     
