--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ footer {
  
   <tr>
       <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1>
-       <p> 
+       <p style="font-size:15px;color:#BC8F8F"> 
         <a href="https://westpac.taleo.net/careersection/westpacgroup/jobdetail.ftl?job=SYD73030&tz=GMT-05%3A00&tzname=America%2FChicago&src=JB-12080&ittk=NU7NXmZx9HDvTkxudp4UuTVW7hpL10f-2_O7Bv4Homs">job link</a> 
        </p>
        </td>
