--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ footer {
    <td><h1 style="text-align:center;font-size:25px;color:#BC8F8F"> <i> Interest in IT </i> <h1></td>
    
     <td> 
-     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F> 
+     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F">
    My interest in IT first started when I took a compulsory course in Computer Principles during my Foundation studies. 
    The subject taught me the basics of a computer system as well as an understanding of how the Internet and cloud computing works. 
    After completing that course, I decided to further explore my interest in IT by adding C Programming and Calculus into my course syllabus, 
