--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ footer {
     
 
 <header>
-<h1> Nana Lee's ePortfolio </h1>
+<h1 style=font-family:"Courier-New;"> Nana Lee's ePortfolio </h1>
 </header>
  
  <section>
