--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <style>
  table, th, td {
   border: 1px solid #D8BFD8;
+  border-left: none;
+  border-right: none;
   border-collapse: collapse;
 }
+ 
 th, td {
   padding: 30px;
 }
