--- a/index.html
+++ b/index.html
@@ -180,24 +180,10 @@ footer {
      <tr>
       <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Project Idea <i> </td>
        </tr>
+       
+       <tr>
+        <td><h1 style="font-size:25px;color:#BC8F8F"> <i> References <i> </td>
 </table>
-  
-  <p style="color:red;"> <b> INTEREST IN IT? </b> </p>
-  
-   <p> 
-  </p>
-  
-  
-  <pstyle="color:#E6E6FA;"> <b> Was there a particular event or person that sparked your interest? </p> </b>
-  
-   
-   
-   <pstyle="background-color:#E6E6FA;><b> Why did you choose to come to RMIT? </p> </b>
-            
-<p> I chose to come to RMIT because I liked the program structure for Bachelor of Information Technology and related degrees such as Computer Science and Software Engineering. 
- I originally applied for Bachelor of Software Engineering program, however I was not aware of the advanced mathematics prerequisite. 
- After my first year, I might consider switching to the Bachelor of Computer Science program. </p>
-
 
   </article>
  </section>
