--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ footer {
          <td><h1 style="font-size:20px;color:#BC8F8F"> <i> Technology Strategy Analyst </i> </h1>
           
      
-          <img src="https://user-images.githubusercontent.com/79895560/111909112-e5cbd380-8a96-11eb-8d9e-8d3ec5c13db6.png"style="width:450px;height:75px;">
+          <img src="https://user-images.githubusercontent.com/79895560/111909112-e5cbd380-8a96-11eb-8d9e-8d3ec5c13db6.png"style="width:450px;height:85px;">
        <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
         Analysing trends within the industry to formulate business and technology strategies, as well as develop pathways to make optimal investment decisions. 
        </p>
@@ -172,7 +172,9 @@ footer {
    
   </tr>
   <tr>
-    <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile <i> </td>
+    <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile <i>
+     <img src="https://user-images.githubusercontent.com/79895560/111969341-17937780-8b35-11eb-80e0-473ca6faa3e4.png"style="width:100px;height:100px;">
+     </td>
     <td>Doe</td>
     <td>80</td>
   </tr>
