--- a/index.html
+++ b/index.html
@@ -172,8 +172,11 @@ footer {
    
   </tr>
   <tr>
-    <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile <i>
-     <img src="https://user-images.githubusercontent.com/79895560/111969341-17937780-8b35-11eb-80e0-473ca6faa3e4.png"style="width:100px;height:100px;">
+    <td> 
+     <center>
+     <h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile <i>
+     <br>
+     <img src="https://user-images.githubusercontent.com/79895560/111969341-17937780-8b35-11eb-80e0-473ca6faa3e4.png"style="width:130px;height:130px;">
      </td>
     <td>Doe</td>
     <td>80</td>
@@ -185,6 +188,21 @@ footer {
        
        <tr>
         <td><h1 style="font-size:25px;color:#BC8F8F"> <i> References <i> </td>
+         <td> 
+          <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
+          De' R, Pandey, N & Pal A, ‘Impact of digital surge during Covid-19 pandemic: A viewpoint on research and practice’. Int J Inf Manage. 2020;55:102171. doi:10.1016/j.ijinfomgt.2020.102171
+          <br>
+           García-Batista, Z. E., Guerra-Peña, K., Cano-Vindel, A., Herrera-Martínez, S. X., & Medrano, L. A. (2018). Validity and reliability of the Beck Depression Inventory (BDI-II) in general and hospital population of Dominican Republic. PloS one, 13(6), e0199750. https://doi.org/10.1371/journal.pone.0199750
+           <br>
+           Kamel, H 2020, ‘Suicide cases on the rise amid pandemic’, The Malaysian Reserve, 11 November, viewed 22 March 2021, < https://themalaysianreserve.com/2020/11/11/suicide-cases-on-the-rise-amid-pandemic/>
+           <br>
+           Shu Q, Tu Q, & Wang K, (2011) ‘The Impact of Computer Self-Efficacy and Technology Dependence on Computer-Related Technostress: A Social Cognitive Theory Perspective, International Journal of Human–Computer Interaction,’ 27:10, 923-939, DOI: 10.1080/10447318.2011.555313
+           <br>
+           Spitzer RL, Kroenke K, Williams JBW, Löwe B. A Brief Measure for Assessing Generalized Anxiety Disorder: The GAD-7. Arch Intern Med. 2006;166(10):1092–1097. doi:10.1001/archinte.166.10.1092
+           <br>
+          </p>
+    
+
 </table>
 
   </article>
