--- a/index.html
+++ b/index.html
@@ -136,9 +136,6 @@ footer {
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
     During the second lockdown in Malaysia, I caved in and watched a Korean drama called Start-Up.
     Although I had already chosen to pursue a degree in IT, this show definitely helped me realise how impactful the technology industry is. 
-    The plot involved 3 IT majors who developed an artificial intelligence based software to visually recognize items in real life. 
-    Afterwards, the software was used to create an application to help visually impaired individuals perform daily functions. 
-    The show also analysed the public’s general fear of technology replacing labour. 
     Watching the show also introduced me to some new concepts such as machine learning, algorithms and hackathons. 
     I did not fully understand these topics at first, but I was determined to understand them and intensively read books and articles on these topics.
      </p>
@@ -154,8 +151,11 @@ footer {
   </tr>
  
   <tr>
-      <td><h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1>
+      <td>
+       <center>
+       <h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1>
        <p style="font-size:15px;color:#BC8F8F"> 
+        <center>
         <a href="https://westpac.taleo.net/careersection/westpacgroup/jobdetail.ftl?job=SYD73030&tz=GMT-05%3A00&tzname=America%2FChicago&src=JB-12080&ittk=NU7NXmZx9HDvTkxudp4UuTVW7hpL10f-2_O7Bv4Homs">job link</a> 
        </p>
        </td>
