--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@ footer {
  
   <tr>
     
-   <td><h1 style="text-align:center;font-size:25px;color:#BC8F8F"> <i> Interest in IT </i> <h1></td>
+   <td><h1 style="text-align:center;font-size:25px;color:#BC8F8F"> <i> Interest in IT </i> <h1>
+    <img src="https://user-images.githubusercontent.com/79895560/111976432-93dd8900-8b3c-11eb-8fb7-99170b203e9e.png"style="width:180px;height:200px;">
+    </td>
    
     <td> 
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F">
