--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ footer {
        <center>
        <h1 style="font-size:25px;color:#BC8F8F"> <i> Ideal Job </i> <h1>
         <center>
-    <img src="https://user-images.githubusercontent.com/79895560/111985444-942f5180-8b47-11eb-90b4-abf187e1b2d3.png;">
+    <img src="https://user-images.githubusercontent.com/79895560/111986978-91356080-8b49-11eb-8223-ddab8d647cec.png;">
        <p style="font-size:15px;color:#BC8F8F"> 
         <center>
         <a href="https://westpac.taleo.net/careersection/westpacgroup/jobdetail.ftl?job=SYD73030&tz=GMT-05%3A00&tzname=America%2FChicago&src=JB-12080&ittk=NU7NXmZx9HDvTkxudp4UuTVW7hpL10f-2_O7Bv4Homs">job link</a> 
@@ -184,7 +184,9 @@ footer {
     <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> Myers Brigg Type Indicator </i> </h2>
      <p> </p>
      <h3 style="font-size:18px;color:#BC8F8F"> Strengths </h3>
-     <p> </p>
+     <l> Socialable </l>
+     <l> Leadership </l>
+     <l> Determination </l>
      <h3 style="font-size:18px;color:#BC8F8F"> Weaknesses </h3>
      <p> </p>
      <h3 style="font-size:18px;color:BC8F8F"> Analysis </h3>
