--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ footer {
     
 
 <header>
- <img src="https://user-images.githubusercontent.com/79895560/111987824-a3fc6500-8b4a-11eb-84d0-dbc730d63568.gif">
+ <img src="https://user-images.githubusercontent.com/79895560/111987824-a3fc6500-8b4a-11eb-84d0-dbc730d63568.gif" style="length:100%;width:100%";>
 <h1 style=font-family:"Courier-New;"> Nana Lee's ePortfolio </h1>
 </header>
  
@@ -185,9 +185,7 @@ footer {
     <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> Myers Brigg Type Indicator </i> </h2>
      <p> </p>
      <h3 style="font-size:18px;color:#BC8F8F"> Strengths </h3>
-     <l> Socialable </l>
-     <l> Leadership </l>
-     <l> Determination </l>
+     <p> 
      <h3 style="font-size:18px;color:#BC8F8F"> Weaknesses </h3>
      <p> </p>
      <h3 style="font-size:18px;color:BC8F8F"> Analysis </h3>
