--- a/index.html
+++ b/index.html
@@ -182,13 +182,9 @@ footer {
       <br>
      <img src="https://user-images.githubusercontent.com/79895560/111969341-17937780-8b35-11eb-80e0-473ca6faa3e4.png"style="width:180px;height:200px;">
      </td>
-    <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> Myers Brigg Type Indicator </i> </h2>
+    <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> ENTJ </i> </h2>
      <p> </p>
-     <h3 style="font-size:18px;color:#BC8F8F"> Strengths </h3>
-     <p> 
-     <h3 style="font-size:18px;color:#BC8F8F"> Weaknesses </h3>
-     <p> </p>
-     <h3 style="font-size:18px;color:BC8F8F"> Analysis </h3>
+     <h3 style="font-size:18px;color:#BC8F8F"> Analysis </h3>
      <p> </p>
       </td>
    
@@ -248,6 +244,30 @@ Additionally, there will also be an optional form for the user to elaborate on i
            <br>
            <br>
           </p>
+          
+          <td>
+           <ul>
+  <li>
+    <img src="https://res.cloudinary.com/css-tricks/image/upload/f_auto,q_auto/v1568814785/photostream-photos/DSC05466_kwlv0n.jpg" alt="A Toyota Previa covered in graffiti" loading="lazy">
+  </li>
+  <li>
+    <img src="https://res.cloudinary.com/css-tricks/image/upload/f_auto,q_auto/v1568814785/photostream-photos/DSC05621_zgtcco.jpg" alt="Interesting living room light through a window" loading="lazy">
+  </li>
+  <li>
+    <img src="https://res.cloudinary.com/css-tricks/image/upload/f_auto,q_auto/v1568814785/photostream-photos/DSC05513_gfbiwi.jpg" alt="Sara on a red bike" loading="lazy">
+  </li>
+  <li>
+    <img src="https://res.cloudinary.com/css-tricks/image/upload/f_auto,q_auto/v1568814785/photostream-photos/DSC05588_nb0dma.jpg" alt="XOXO venue in between talks" loading="lazy">
+  </li>
+  <li>
+    <img src="https://res.cloudinary.com/css-tricks/image/upload/f_auto,q_auto/v1568814785/photostream-photos/DSC05459_ziuomy.jpg" alt="Trees lit by green light during dusk" loading="lazy">
+  </li>
+  <li>
+    <img src="https://res.cloudinary.com/css-tricks/image/upload/f_auto,q_auto/v1568814785/photostream-photos/DSC05586_oj8jfo.jpg" alt="Portrait of Justin Pervorse" loading="lazy">
+  </li>
+  <li>
+   
+            </td>
     
 
 </table>
