--- a/index.html
+++ b/index.html
@@ -19,6 +19,44 @@ th, td {
   }
   <body>
  
+ <h2 class="w3-center">Automatic Slideshow</h2>
+
+<div class="w3-content w3-section" style="max-width:500px">
+  <img class="mySlides" src="img_la.jpg" style="width:100%">
+  <img class="mySlides" src="img_ny.jpg" style="width:100%">
+  <img class="mySlides" src="img_chicago.jpg" style="width:100%">
+</div>
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}    
+  x[myIndex-1].style.display = "block";  
+  setTimeout(carousel, 2000); // Change image every 2 seconds
+}
+ </script>
+ table, th, td {
+  border: 5px solid #D8BFD8;
+  border-left: none;
+  border-right: none;
+  border-collapse: collapse;
+}
+ 
+th, td {
+  padding: 30px;
+}
+  * {
+    box sizing:border-box;
+  }
+ 
   {font-family: Courier New, Times New Roman, Georgia;
   }
   
@@ -77,7 +115,7 @@ footer {
 }
 </style>
 </head>
-<body>
+</body>
   
     
 
