--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ th, td {
  <h2 class="w3-center">Automatic Slideshow</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="img_la.jpg" style="width:100%">
-  <img class="mySlides" src="img_ny.jpg" style="width:100%">
-  <img class="mySlides" src="img_chicago.jpg" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/111874918-24e42100-89d2-11eb-9b52-3eeaabe102bb.jpeg" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/111874921-26ade480-89d2-11eb-8062-ab717e6bcf0f.jpeg" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/111991577-6fd77300-8b4f-11eb-989c-6109069f38bd.JPG" style="width:100%">
 </div>
 
 <script>
@@ -43,6 +43,7 @@ function carousel() {
   setTimeout(carousel, 2000); // Change image every 2 seconds
 }
  </script>
+ 
  table, th, td {
   border: 5px solid #D8BFD8;
   border-left: none;
