--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ footer {
 </div>
 
 <script>
-var myIndex = 0;
+var pics = 0;
 carousel();
 
 function carousel() {
@@ -131,10 +131,10 @@ function carousel() {
   for (i = 0; i < x.length; i++) {
     x[i].style.display = "none";  
   }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}    
-  x[myIndex-1].style.display = "block";  
-  setTimeout(carousel, 2000); // Change image every 2 seconds
+  pics++;
+  if (pics > x.length) {pics = 1}    
+  x[pics-1].style.display = "block";  
+  setTimeout(carousel, 3000); // Change image every 2 seconds
 }
  </script>
  </body>
@@ -224,14 +224,17 @@ function carousel() {
      </td>
     <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> ENTJ </i> </h2>
      <br>
-     <pstyle="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> The results of this test has given me a better understanding of how people perceive me, and that I should embrace my strengths instead of trying to change my personality to please others. Reading about my personality type’s attributes has also helped me realise my potential and the steps I need to take to improve myself, such as empathizing with others more and being more tolerant. 
+     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> The results of this test has given me a better understanding of how people perceive me, and that I should embrace my strengths instead of trying to change my personality to please others. Reading about my personality type’s attributes has also helped me realise my potential and the steps I need to take to improve myself, such as empathizing with others more and being more tolerant. 
      </p>
      <br>
      <h3 style="font-size:18px;color:#BC8F8F"> Analysis </h3>
-     <pstyle="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> Although ENTJs have difficulty working in teams, I believe that my friendly and bubbly personality will help me achieve satisfactory results, while still avoiding conflict among team members. As an ENTJ, I have a strong sense of determination and dedication when it comes to work, however, I do realise that my emotions are turbulent, which may cause me to have mood swings and lash out at my team.
+     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
+      Although ENTJs have difficulty working in teams, I believe that my friendly and bubbly personality will help me achieve satisfactory results, while still avoiding conflict among team members. As an ENTJ, I have a strong sense of determination and dedication when it comes to work, however, I do realise that my emotions are turbulent, which may cause me to have mood swings and lash out at my team.
      </p>
-     <pstyle="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> When forming a team, I should also get to know my teammates so I can empathize with their concerns and see them as equals, instead of merely focusing on the task. Learning about their traits can also help me analyse their strengths and weaknesses, allowing me to delegate tasks between us and seek help from them to strengthen my weaker abilities. 
+     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
+      When forming a team, I should also get to know my teammates so I can empathize with their concerns and see them as equals, instead of merely focusing on the task. Learning about their traits can also help me analyse their strengths and weaknesses, allowing me to delegate tasks between us and seek help from them to strengthen my weaker abilities. 
      </p>
+     <img src="https://user-images.githubusercontent.com/79895560/112013318-eaf75400-8b64-11eb-8af4-dbe179a638b9.png"style="width180px;height:250px;>
       </td>
    
   </tr>
