--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@ function carousel() {
      <center>
      <h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile <i>
      <br>
-      <br>
      <img src="https://user-images.githubusercontent.com/79895560/111969341-17937780-8b35-11eb-80e0-473ca6faa3e4.png"style="width:180px;height:200px;">
      </td>
+      
     <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> ENTJ </i> </h2>
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> The results of this test has given me a better understanding of how people perceive me, and that I should embrace my strengths instead of trying to change my personality to please others. Reading about my personality type’s attributes has also helped me realise my potential and the steps I need to take to improve myself, such as empathizing with others more and being more tolerant. 
      </p>
@@ -231,9 +231,9 @@ function carousel() {
      </p>
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
       When forming a team, I should also get to know my teammates so I can empathize with their concerns and see them as equals, instead of merely focusing on the task. Learning about their traits can also help me analyse their strengths and weaknesses, allowing me to delegate tasks between us and seek help from them to strengthen my weaker abilities. 
-  
-     <img src="https://user-images.githubusercontent.com/79895560/112013318-eaf75400-8b64-11eb-8af4-dbe179a638b9.png"style="width180px;height:250px;>
      </p>
+     <h3 style="font-size:18px;color:#BC8F8F"> Learning Style </h3>   
+     <h3 style="font-size:18px;color:#BC8F8F"> Enneagram </h3>                                        
       </td>
    
   </tr>
