--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ footer {
   <h2 class="w3-center">Automatic Slideshow</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="filmpics" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="width:100%">
-  <img class="filmpics" src="https://user-images.githubusercontent.com/79895560/112173040-30348800-8c30-11eb-9ccc-1a32c7eeb576.JPEG" style="width:100%">
-  <img class="filmpics" src="https://user-images.githubusercontent.com/79895560/112173189-4f331a00-8c30-11eb-9e9e-7418708d9bd4.JPEG" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173040-30348800-8c30-11eb-9ccc-1a32c7eeb576.JPEG" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173189-4f331a00-8c30-11eb-9e9e-7418708d9bd4.JPEG" style="width:100%">
 </div>
 
 <script>
