--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ footer {
     <ul>
      <p>
       <center>
-     <img src="https://user-images.githubusercontent.com/79895560/111899476-c10c3780-8a67-11eb-8504-ed42fba2b7f4.JPG" alt="self-portrait" style="width:150px;height:150px;border-radius:60%;">    
+     <img src="https://user-images.githubusercontent.com/79895560/112177140-a4bcf600-8c33-11eb-9af7-748928692673.jpeg" alt="self-portrait" style="width:150px;height:150px;border-radius:60%;">    
       </p>
      </center>
    <br>
-   <h2> Nayli </h2>
+   <h2> <center> Nayli </center> </h2>
       <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
@@ -240,7 +240,7 @@ function carousel() {
     <td> <h2 style="font-size:20px;color:#BC8F8F"> <i> ENTJ </i> </h2>
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> The results of this test has given me a better understanding of how people perceive me, and that I should embrace my strengths instead of trying to change my personality to please others. Reading about my personality type’s attributes has also helped me realise my potential and the steps I need to take to improve myself, such as empathizing with others more and being more tolerant. 
      </p>
-     <h3 style="font-size:18px;color:#BC8F8F"> <i> Analysis <i> </h3>
+     <h3 style="font-size:18px;color:#BC8F8F"> <i> Analysis </i> </h3>
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
       Although ENTJs have difficulty working in teams, I believe that my friendly and bubbly personality will help me achieve satisfactory results, while still avoiding conflict among team members. As an ENTJ, I have a strong sense of determination and dedication when it comes to work, however, I do realise that my emotions are turbulent, which may cause me to have mood swings and lash out at my team.
      </p>
