--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ footer {
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
    <body>
-  <h2 class="w3-center">FILM</h2>
+    <h2 class="w3-center"><center> FILM </center></h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="width:100%">
