--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ footer {
     <ul>
      <p>
       <center>
-     <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:150px;height:150px;border-radius:60%;">    
+     <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;">    
       </p>
      </center>
    <br>
-   <h2> <center> Nayli </center> </h2>
+   <h2> <center> Nayli Rozali </center> </h2>
       <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
