--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ footer {
     <h2 class="w3-center"><center> FILM </center></h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173040-30348800-8c30-11eb-9ccc-1a32c7eeb576.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173189-4f331a00-8c30-11eb-9e9e-7418708d9bd4.JPEG" style="width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173040-30348800-8c30-11eb-9ccc-1a32c7eeb576.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173189-4f331a00-8c30-11eb-9e9e-7418708d9bd4.JPEG" style="border-radius:15px;width:100%">
  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173316-68d46180-8c30-11eb-9b72-6da08d828383.JPEG" style="width:100%">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174138-21020a00-8c31-11eb-8ce7-4c18c48d63a5.JPEG" style="width:100%">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174239-3840f780-8c31-11eb-934f-b629767f4d58.JPEG" style="width:100%">
