--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ th, td {
 nav {
   float:left;
   width:20%;
-  background:#E6E6FA;
+  background:#D8BFD8;
   padding: 20px;
  font-size: 15px;
  color: #556B2F;
